--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,12 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "jsx": "react-native",
+    "types": ["jest", "node", "styled-components"],
+    "resolveJsonModule": true,
+    "noImplicitAny": true,
+    "typeRoots": ["node_modules/@types", "./src/types"]
+  },
+  "include": ["src", "src/styled.d.ts"],
+  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
