--- a/ios/VehiclesApp/Info.plist
+++ b/ios/VehiclesApp/Info.plist
@@ -48,5 +48,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>UIAppFonts</key>
+  <array>
+    <string>MaterialCommunityIcons.ttf</string>
+    <string>FontAwesome.ttf</string>
+    <string>AntDesign.ttf</string>
+  </array>
 </dict>
 </plist>
