--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VehiclesApp",
+  "name": "vehicles_app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,11 +7,25 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-vector-icons/ant-design": "^4.4.2",
+    "@react-native-vector-icons/common": "^11.0.0",
+    "@react-navigation/elements": "^2.3.8",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "dayjs": "^1.11.13",
     "react": "19.0.0",
-    "react-native": "0.79.1"
+    "react-native": "0.79.1",
+    "react-native-error-boundary": "^2.0.0",
+    "react-native-input-select": "^2.1.3",
+    "react-native-modal-dropdown": "^1.0.2",
+    "react-native-restart": "^0.0.27",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -24,12 +38,18 @@
     "@react-native/eslint-config": "0.79.1",
     "@react-native/metro-config": "0.79.1",
     "@react-native/typescript-config": "0.79.1",
-    "@types/jest": "^29.5.13",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.0.0",
+    "@types/react-native-modal-dropdown": "^1.0.5",
     "@types/react-test-renderer": "^19.0.0",
+    "@types/styled-components": "^5.1.9",
+    "@types/styled-components-react-native": "^5.2.5",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "jest": "^29.7.0",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
+    "prettier": "^3.5.3",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
