--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "noImplicitAny": true,
     "typeRoots": ["node_modules/@types", "./src/types"]
   },
-  "include": ["src", "src/styled.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/types/**/*.d.ts"],
   "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
